--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-.eunit
-deps
-*.o
-*.beam
-*.plt
+_build
 erl_crash.dump
-ebin/*.beam
-rel/example_project
-.concrete/DEV_MODE
-.rebar
+*.log
+rebar.lock
+rebar3.crashdump
+/src/plsql_lexer.erl
+/src/plsql_parser.erl
+test/generated/ct/reliability_*
+test/generated/eunit
+tmp
