Konnexions GmbH license & replacing Travis/CI.

--- a/rebar.config
+++ b/rebar.config
@@ -2,68 +2,40 @@
 %%
 %% rebar.config: PL/SQL - rebar3 configuration file.
 %%
-%% Copyright (c) 2018-18 K2 Informatics GmbH.  All Rights Reserved.
-%%
-%% This file is provided to you under the Apache License,
-%% Version 2.0 (the "License"); you may not use this file
-%% except in compliance with the License.  You may obtain
-%% a copy of the License at
-%%
-%%   http://www.apache.org/licenses/LICENSE-2.0
-%%
-%% Unless required by applicable law or agreed to in writing,
-%% software distributed under the License is distributed on an
-%% "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-%% KIND, either express or implied.  See the License for the
-%% specific language governing permissions and limitations
-%% under the License.
-%%
 %% -----------------------------------------------------------------------------
 
 {cover_enabled, true}.
-{cover_excl_mods, [
-    plsql_lexer,
-    plsql_parser
-]}.
+
+{cover_excl_mods, [plsql_lexer, plsql_parser]}.
+
 {cover_export_enabled, true}.
+
 {cover_opts, [verbose]}.
 
-{coveralls_coverdata, [
-    "_build/test/cover/ct.coverdata",
-    "_build/test/cover/eunit.coverdata"
-]}.
-{coveralls_service_name, "travis-ci"}.
+{coveralls_coverdata, ["_build/test/cover/ct.coverdata", "_build/test/cover/eunit.coverdata"]}.
 
-{ct_opts, [
-    {cover},
-    {verbose}
-]}.
+{coveralls_service_name, "github"}.
+
+{ct_opts, [{cover}, {verbose}]}.
 
 {dialyzer_plt_location, local}.
-{dialyzer_warnings, [
-    error_handling,
-    overspecs,
-    race_conditions,
-    specdiffs,
-    underspecs,
-    unknown,
-    unmatched_returns
-]}.
 
-{eunit_opts, [
-    {skip_deps, true},
-    verbose
-]}.
+{
+    dialyzer_warnings,
+    [error_handling, overspecs, race_conditions, specdiffs, underspecs, unknown, unmatched_returns]
+}.
 
-{profiles, [
-    {test, [
-        {plugins, [
-            {coveralls, {git, "https://github.com/markusn/coveralls-erl", {branch, "master"}}},
-            {geas_rebar3, {git, "https://github.com/crownedgrouse/geas_rebar3.git", {branch, "master"}}}
-        ]}
-    ]}
-]}.
+{eunit_opts, [{skip_deps, true}, verbose]}.
 
-{xrl_opts, [{verbose, true}]}.
+{plugins, [rebar3_hex, steamroller]}.
 
-{yrl_opts, [{verbose, false}]}.
+{
+    steamroller,
+    [{line_length, 100}, {indent, 2}, {inputs, ["rebar.config*", "{src,test}/**/*.{[he]rl,app.src}"]}]
+}.
+
+{profiles, [{test, [{plugins, [coveralls, geas_rebar3]}]}]}.
+
+{xrl_opts, [{report_warnings, false}, {verbose, false}]}.
+
+{yrl_opts, [{report_warnings, false}, {verbose, false}]}.
