--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
+*.log
+.idea
 _build
 erl_crash.dump
-*.log
 rebar.lock
 rebar3.crashdump
-/src/plsql_lexer.erl
-/src/plsql_parser.erl
-test/generated/ct/
-test/generated/eunit
+src/plsql_lexer.erl
+src/plsql_parser.erl
+test/generated
 tmp
