Konnexions GmbH license & replacing Travis/CI.

--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -23,6 +23,8 @@ jobs:
       run: rebar3 compile
     - name: Run enuit tests
       run: rebar3 eunit
+    - name: Prepare scripts
+      run: chmod +x /test/*.sh
     - name: Generate CT tests
       env:
         GENERATE_COMPACTED: true
