Konnexions GmbH license & replacing Travis/CI.

--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Run enuit tests
       run: rebar3 eunit
     - name: Prepare scripts
-      run: chmod +x /test/*.sh
+      run: chmod +x test/*.sh
     - name: Generate CT tests
       env:
         GENERATE_COMPACTED: true
